crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__collect_properties_schema_order.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"properties\":{\"a\":{\"type\":\"integer\"},\"b\":{\"type\":\"integer\"}}}"
expression: collect_body(schema)
---
match instance {
            serde_json::Value::Object(obj) => {
                if let Some(value) = obj.get("a") {
                    let instance = value;
                    if !(match instance {
                        serde_json::Value::Number(n) => {
                            jsonschema::__private::types::is_integer(n)
                        }
                        _ => false,
                    }) {
                        let __path = &__path.push("a");
                        if !(match instance {
                            serde_json::Value::Number(n) => {
                                jsonschema::__private::types::is_integer(n)
                            }
                            _ => false,
                        }) {
                            __errors
                                .push(
                                    jsonschema::__private::error::single_type(
                                        "/properties/a/type",
                                        __path.into(),
                                        instance,
                                        jsonschema::JsonType::Integer,
                                    ),
                                );
                        }
                    }
                }
                if let Some(value) = obj.get("b") {
                    let instance = value;
                    if !(match instance {
                        serde_json::Value::Number(n) => {
                            jsonschema::__private::types::is_integer(n)
                        }
                        _ => false,
                    }) {
                        let __path = &__path.push("b");
                        if !(match instance {
                            serde_json::Value::Number(n) => {
                                jsonschema::__private::types::is_integer(n)
                            }
                            _ => false,
                        }) {
                            __errors
                                .push(
                                    jsonschema::__private::error::single_type(
                                        "/properties/b/type",
                                        __path.into(),
                                        instance,
                                        jsonschema::JsonType::Integer,
                                    ),
                                );
                        }
                    }
                }
            }
            _ => {}
        }
