crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__const_str.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"const\":\"hello\"}"
expression: is_valid_body(schema)
---
instance.as_str() == Some("hello")
