crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__const_str_with_type.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"const\":\"hello\",\"type\":\"string\"}"
expression: is_valid_body(schema)
---
instance.as_str() == Some("hello")
