crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__content_annotation_only_2020.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"$schema\":\"https://json-schema.org/draft/2020-12/schema\",\"contentEncoding\":\"base64\",\"type\":\"string\"}"
expression: is_valid_body(schema)
---
instance.is_string()
