crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__content_base32.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"$schema\":\"http://json-schema.org/draft-07/schema#\",\"contentEncoding\":\"base32\",\"type\":\"string\"}"
expression: is_valid_body(schema)
---
match instance {
            __Value::String(s) => __content::is_base32(s),
            _ => false,
        }
