crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__content_base64.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"$schema\":\"http://json-schema.org/draft-07/schema#\",\"contentEncoding\":\"base64\",\"type\":\"string\"}"
expression: is_valid_body(schema)
---
match instance {
            __Value::String(s) => __content::is_base64(s),
            _ => false,
        }
