crates/jsonschema-macros-core/src/snapshots/jsonschema_macros_core__tests__content_ignored_on_modern_draft.snap
---
source: crates/jsonschema-macros-core/src/tests.rs
description: "{\"contentEncoding\":\"base64\",\"type\":\"string\"}"
expression: is_valid_body(schema)
---
instance.is_string()
